--- a/emotion-analyzer-web/public/index.html
+++ b/emotion-analyzer-web/public/index.html
@@ -5,16 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-        <title>emotion-analyzer-web</title>
+        <title>Sentiment Analyzer Portal</title>
     </head>
     <body>
         <noscript>
-            <strong
-                >We're sorry but emotion-analyzer-web doesn't work properly without JavaScript enabled. Please enable it
-                to continue.</strong
-            >
+            <strong>
+                We're sorry but Sentiment Analyzer Portal doesn't work properly without JavaScript enabled. Please
+                enable it to continue.
+            </strong>
         </noscript>
         <div id="app"></div>
-        <!-- built files will be auto injected -->
+        <!-- Thanks for your advice -->
     </body>
 </html>
